# pulsenews-api

./: .env.example  .gitignore  main.py  pyproject.toml  pytest.ini  requirements.txt
api/: admin.py  apps.py  authentication.py  models.py  schema.py  serializers.py  throttles.py  urls.py  views.py
api/fixtures/: sample.json
api/migrations/: 0001_initial.py  0002_apikey.py
api/tests/: conftest.py  test_api_key.py  test_category.py  test_news.py
core/: settings.py  urls.py
integrations/: gnews.py  main.py
