[project]
name = "pulsenews-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]

